--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,25 @@
 Package: bandit4abtest
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Applied Dynamic Allocation in A/B Test
+Version: 0.1.1
 Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    c(person("Emmanuelle", "Claeys", email = "claeys@unistra.fr", role = c("aut", "cre")),
+  person("Pierre", "Gançarski", email = "gancarski@unistra.fr", role = c("aut")),
+  person("Myriam", "Maummy-Bertrand", email = "mmaumy@unistra.fr", role = c("aut")),
+  person("Romain", "Laemmel", email = "romain.laemmel@epitech.eu", role = c("ctb")),
+  person("Raymond", "Lim", email = "raymond.lim@epitech.eu", role = c("ctb")),
+  person("Marin", "Brunel", email = "marin.brunel@epitech.eu", role = c("ctb")),
+  person("Marc", "Gross", email = "marc.gross@epitech.eu", role = c("ctb")))
+Description: Contains functions for improve traditional A/B test by methods from 
+  bandit theory. Includes the most common bandit algorithms and some new methods 
+  specific to A/B tests. Dynamic allocation optimization in A/B tests using 
+  classification-based preprocessing, Claeys, Emmanuelle and Gancarski, Pierre 
+  and Maumy-Bertrand, Myriam and Wassner, Hubert. Regression Tree for Bandits 
+  Models in A/B Testing, Claeys, Emmanuelle and Gancarski, Pierre and 
+  Maumy-Bertrand, Myriam and Wassner, Hubert.
+Maintainer: Emmanuelle Claeys <claeys@unistra.fr>
+License: GPL (>= 3)
+Imports: 
+  stats
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
